--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".Home">
+    tools:context=".Home_User">
     <Space
         android:layout_width="match_parent"
         android:layout_height="20dp"
