--- a/app/src/main/res/layout/activity_modifica_password.xml
+++ b/app/src/main/res/layout/activity_modifica_password.xml
@@ -133,7 +133,7 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"/>
     <Button
-        android:id= "@+id/logOut"
+        android:id= "@+id/aggiornaPassword"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
