--- a/app/src/main/res/layout/activity_modifica_password.xml
+++ b/app/src/main/res/layout/activity_modifica_password.xml
@@ -107,6 +107,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
+        android:inputType="textPassword"
         android:textColor="@color/black"
         />
     <TextView
@@ -126,6 +127,7 @@
         android:id="@+id/repitepassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:textSize="20dp"
         android:textColor="@color/black"
         />
