--- a/app/src/main/res/layout/activity_modifica_password.xml
+++ b/app/src/main/res/layout/activity_modifica_password.xml
@@ -102,6 +102,15 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"
         />
+    <TextView
+        android:id="@+id/errore"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ERRORE"
+        android:gravity="center"
+        android:visibility="gone"
+        android:background="@color/red"
+        />
     <EditText
         android:id="@+id/setpassword"
         android:layout_width="match_parent"
