--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="green">#008000</color>
     <color name="blue">#0000FF</color>
     <color name="darkgreen">#006400</color>
+    <color name="red">#FF1100</color>
 </resources>
