commitAlegiuse1feb.last

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="blue">#0000FF</color>
     <color name="darkgreen">#006400</color>
     <color name="red">#FF1100</color>
+    <color name="panna">#E9E7E7</color>
 </resources>
