--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -101,11 +101,12 @@
             android:textSize="30dp" />
 
         <EditText
+            android:id="@+id/dataDiNascitaInserita"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/dataDiNascitaInserita"
             android:hint="es:18/02/1993"
-            android:textSize="26dp"/>
+            android:inputType="number"
+            android:textSize="26dp" />
 
         <Space
             android:layout_width="wrap_content"
